syntax = "proto3";

package echoPackage;

message EchoMessage {
    string value = 1;
}

//  methods => 
// unary(req,res classic) 
// client Stream  => stream data -> server
// Server Stream => stream data -> client
// bidi Stream -> send data between server and clinet

service EchoService{
    rpc EchoUnary (EchoMessage) returns (EchoMessage);
    rpc EchoClientStream (stream EchoMessage) returns (EchoMessage);
    rpc EchoServerStream (EchoMessage) returns (stream EchoMessage);
    rpc EchoBidiStream (stream EchoMessage) returns (stream EchoMessage);
}